<resources>
    <string name="app_name">AppDevY3T3</string>
    <string name="dog_result">Dog Result</string>
    <string name="camera">Camera</string>
    <string name="back">Back</string>
    <string name="dog">Dog</string>
    <string name="dog_1">Dog 1</string>
    <string name="dog_2">Dog 2</string>
    <string name="dog_3">Dog 3</string>
    <string name="dog_library">Dog Library</string>
    <string name="dog_breed">Dog Breed</string>

    <string-array name="dog_breeds_full_text">
        <item>Labrador Retriever</item>
        <item>German Shepherd</item>
        <item>Golden Retriever</item>
        <item>Bulldog</item>
        <item>Beagle</item>
        <item>Poodle</item>
        <item>Rottweiler</item>
        <item>Dachshund</item>
        <item>Siberian Husky</item>
        <item>Shih Tzu</item>
    </string-array>

</resources>