<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Dog_Information"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".BreedResults">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@drawable/circle_black_background"
            android:contentDescription="@string/back"
            android:padding="8dp"
            android:scaleType="center"
            android:src="@drawable/ic_arrow_back_white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Title -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Dog Information"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Dog Image -->
        <ImageView
            android:id="@+id/dogImage"
            android:layout_width="257dp"
            android:layout_height="273dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/dog"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <!-- Dog Name -->
        <TextView
            android:id="@+id/dogName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/dog_breed"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dogImage" />

        <!-- Breed Info Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/breedCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dogName"
            app:layout_constraintVertical_bias="0.01">

            <LinearLayout
                android:id="@+id/cardContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#94B4C1"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="Breed Information:"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!-- Bred For -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Bred For:"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bredFor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Water retrieving" />

                <!-- Breed Group -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Breed Group:"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/breedGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sporting" />

                <!-- Life Span -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Life Span:"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lifeSpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10–12 years" />

                <!-- Temperament -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Temperament:"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/temperament"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Friendly, outgoing, gentle" />

                <!-- Weight -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Weight (Min–Max):"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/weightRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25 kg – 36 kg" />

                <!-- Height -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Height (Min–Max):"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/heightRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="55 cm – 62 cm" />

                <!-- Life Expectancy -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Life Expectancy (Min–Max):"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/expectancyRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10 – 14 years" />

                <!-- Grooming Category -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Grooming:"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/grooming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Low maintenance" />

                <!-- Shedding Category -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Shedding:"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/shedding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Moderate" />

                <!-- Energy Level -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Energy Level:"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/energyLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="High" />

                <!-- Trainability -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Trainability:"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/trainability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Very trainable" />

                <!-- Demeanor -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Demeanor:"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/demeanor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gentle and family-friendly" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Description:"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco." />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>